--- a/html/bindu-tei.htm
+++ b/html/bindu-tei.htm
@@ -440,8 +440,7 @@
                   <citeauthor xmlns="http://www.tei-c.org/ns/1.0">sandersonshaivaexe</citeauthor> for a detailed term discussion. Throughout the text corpus of Haṭhayoga, the <span class="italic">pīṭha</span>s are repeatedly located differently in the yogic body. Additionally, the term refers
                   to a certain yogic technique classified as <span class="italic">mudrā</span> and termed <span class="italic">uḍḍiyānabandha</span> which usually involves a specific type of muscular contraction around the location
                   of the navel. For a detailled discussion of practice see 
-                  <citeauthor xmlns="http://www.tei-c.org/ns/1.0">rootsofyoga2017</citeauthor>. Depending on the text and tradition, there are different models of how and in which
-                  context and with what kind of result practitioners perform the practice.</span> 
+                  <citeauthor xmlns="http://www.tei-c.org/ns/1.0">rootsofyoga2017</citeauthor>.</span> 
                <extra xmlns="http://www.tei-c.org/ns/1.0">The location is the penis. The colour is yellow. The shine is yellow. The quality
                   is Rajas. The deity is Brahmā. The speech is Vaikharī. The power is Sāvitrī. The mount
                   is a goose. The Ṛṣi is Vahaṇa. The appearance is Kāmāgni. Thee body is gross. The
@@ -3167,7 +3166,7 @@
                <uproman xmlns="http://www.tei-c.org/ns/1.0">30</uproman>. <span class="bold">ādhāracakrasya bhedāḥ</span>]</h3>
             <p xmlns="http://www.w3.org/1999/xhtml" id="h30">[XXX. ādhāracakrasya bhedāḥ] <span class="ref">(h30)</span></p> 
             <div xmlns="http://www.w3.org/1999/xhtml" class="wapp">
-               <p id="p30_01"> <span class="note">cf. YSv (PT p. 832) = YK 2.15: ṣoḍaśādhārabhedan tu śṛṇu devi viśeṣataḥ |</span><span class="note">cf. SSP 2.10 (Ed. p. 29): atha ṣoḍaśādhārāḥ kathyante |</span><span class="note">cf. 
+               <p id="p30_01"> <span class="note">cf. YSv (PT p. 839) = YK 2.15: ṣoḍaśādhārabhedan tu śṛṇu devi viśeṣataḥ |</span><span class="note">cf. SSP 2.10 (Ed. p. 29): atha ṣoḍaśādhārāḥ kathyante |</span><span class="note">cf. 
                      <citetitle xmlns="http://www.tei-c.org/ns/1.0">hathasamketacandrikachennai</citetitle> (GOML R3239 fol. 201 l. 20): ity ādhārāḥ ṣodaśa athoktānāṃ ṣoḍaśādhārāṇāṃ kartavyanām
                      āha</span><mark>idānīm ā</mark>dhāracakrasya <mark>bhedāḥ</mark> <mark>kathyante</mark>/ <span class="note">cf. YSv (PT p. 839): aṅguṣṭhapādayos tejaḥ salakṣasthiradṛṣṭimān | pādāṅguṣṭhe ya
                      ādhāraḥ prathamo (<span class="italic">prathamaṃ</span> YK 2.16) yogatattvataḥ |</span><span class="note">cf. SSP 2.10 (Ed. p. 32): tatra prathamaḥ pādāṅguṣṭhādhāraḥ | tatrāgratas tejomayaṃ
